# handlers/develop/resetdatabase.js
@@ -1,0 +1,29 @@
+'use strict';
+var dataProvider = require('../../data/develop/resetdatabase.js');
+/**
+ * Operations on /develop/resetdatabase
+ */
+module.exports = {
+    /**
+     * summary: Reset database
+     * description: 
+     * parameters: 
+     * produces: 
+     * responses: 200
+     */
+    get: function develop_resetDatabase(req, res, next) {
+        /**
+         * Get the data for response 200
+         * For response `default` status 200 is used.
+         */
+        var status = 200;
+        var provider = dataProvider['get']['200'];
+        provider(req, res, function (err, data) {
+            if (err) {
+                next(err);
+                return;
+            }
+            res.status(status).send(data && data.responses);
+        });
+    }
+};
