# handlers/develop/wxaccesstoken.js
@@ -1,0 +1,29 @@
+'use strict';
+var dataProvider = require('../../data/develop/wxaccesstoken.js');
+/**
+ * Operations on /develop/wxaccesstoken
+ */
+module.exports = {
+    /**
+     * summary: Get WX access token
+     * description: 
+     * parameters: 
+     * produces: 
+     * responses: 200
+     */
+    get: function develop_getWxAccessToken(req, res, next) {
+        /**
+         * Get the data for response 200
+         * For response `default` status 200 is used.
+         */
+        var status = 200;
+        var provider = dataProvider['get']['200'];
+        provider(req, res, function (err, data) {
+            if (err) {
+                next(err);
+                return;
+            }
+            res.status(status).send(data && data.responses);
+        });
+    }
+};
